--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="pink-theme">
+<html lang="en" class="blue-theme">
 <head>
   <base href="https://seminalsupport.github.io/PWAWTAXDashboard/">  <title>WTAX DASHBOARD</title>
   
