--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="pink-theme">
+<html lang="en" class="blue-theme">
 <head>
   <base href="/">
   <title>WTAX DASHBOARD</title>
